--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-app.js
-elm-stuff
-play
-script/
-foo.html
-elm
-xelm-package.json
-elm-package.json
-scratch.md
-demo/Main.js
-dist/
-src/Internal/Example.elm
 .idea/
+demo/Main.js
+elm-stuff
+example/Main.js
+example/elm-stuff/
+script/
+src/Internal/Example.elm
 tests/VerifyExamples/
