--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 .idea/
-demo/Main.js
-elm-stuff
-example/Main.js
-example/elm-stuff/
 script/
 src/Internal/Example.elm
 tests/VerifyExamples/
 tools/main.js
-demo/node_modules/
 demo-package/
+**/node_modules/
+**/Main.js
+**/elm-stuff
+**/ex/
