--- a/Demo/package.json
+++ b/Demo/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "elm-live src/Main.elm -- --output Main.js"
+    "start": "elm-live -p 8011 src/Main.elm -- --output Main.js"
   },
   "keywords": [],
   "author": "",
