Make MathJax rendering work for the lamdera example

--- a/example/scripts.yaml
+++ b/example/scripts.yaml
@@ -2,6 +2,6 @@
 scripts:
   debug: elm make --debug src/Main.elm --output=/Main.js
 
-  make:  elm make --debug src/Main.elm --output=Main.js
+  make:  elm make --optimize src/Main.elm --output=Main.js
 
   look  : open -a /Applications/Google\ Chrome.app/ index.html
