- Use \bs, not \backslash - Better macros (image) for export

--- a/parserTool/scripts.yaml
+++ b/parserTool/scripts.yaml
@@ -4,6 +4,6 @@ scripts:
     cmd: elm make --debug src/Main.elm --output ex/main.js && cp src/cli.js ex/cli.js
     desc: Build the command-line interpreter
 
-  cli:
+  parse:
     cmd: node ex/cli.js
-    desc: Run the command-line interpreter
+    desc: Run the command-line parser
